...
    route: MutableState<AppRoutes?>, navController: NavHostController
) {
    when (route.value) {
        AppRoutes.HomeScreen -> {
            IconButton({
                navController.navigate(AppRoutes.LocationSettingsScreen)
            }, modifier = Modifier.testTag("topbar_location_settings_button")) {
                Icon(Icons.Filled.Settings, "Location Settings")
            }
        }

        else -> {

...
    route: MutableState<AppRoutes?>, navController: NavHostController
) {
    when (route.value) {
        is AppRoutes.ScanItemsScreen -> {
            IconButton({
                navController.popBackStack()
            }, modifier = Modifier.testTag("topbar_back_button")) {
                Icon(Icons.AutoMirrored.Default.ArrowBack, "Back")
            }
        }
        is AppRoutes.CompareItemScreen -> {
            IconButton({
                navController.popBackStack()
...
